--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Vue ToDo</title>
 </head>
 <body>
-    
+    <div id="app" class="container">
+
+        <div class="inner-container">
+            <div class="input-container">
+                <input placeholder="Enter your next task" type="text" name="" id="">
+            </div>
+
+            <nav class="nav-task">
+                <i class="fas fa-tasks"></i>
+
+                <div class="nav-task__select">
+                    <span>Todo</span>
+                    <span>Done</span>
+                    <span>All</span>
+                </div>
+            </nav>
+
+            <div class="todo-list">
+                <ul class="todo-list__list">
+                    <li class="todo-list__item"></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
