--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <nav class="nav-task">
-                <i class="fas fa-tasks"></i>
+                <i class="fas fa-tasks opacity"></i>
 
                 <div class="nav-task__select">
                     <span>Todo</span>
@@ -38,7 +38,14 @@
 
             <div class="todo-list">
                 <ul class="todo-list__list">
-                    <li class="todo-list__item"></li>
+                    <li class="todo-list__item">
+                        <div class="task">
+                            <i class="fas fa-check"></i>
+                            <span>Gym</span> 
+                        </div>
+
+                        <i class="fas fa-times red"></i>
+                    </li>
                 </ul>
             </div>
         </div>
