--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,700;1,200;1,300;1,400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -22,7 +22,7 @@
 
             <div class="input-container">
                 <i class="far fa-edit"></i>
-                <input placeholder="Enter your next task" type="text" name="" id="">
+                <input v-model="todos.text" placeholder="Enter your next task" type="text" name="" id="">
                 <i class="fas fa-plus-circle"></i>
             </div>
 
@@ -38,14 +38,14 @@
 
             <div class="todo-list">
                 <ul class="todo-list__list">
-                    <li class="todo-list__item">
+                    <li v-for="todo in todos" class="todo-list__item">
                         <div class="task">
                             <i class="fas fa-check"></i>
-                            <span>Gym</span> 
+                            <span :class="todo.done == true? 'done' : ''">{{todo.text}}</span> 
                         </div>
-
                         <i class="fas fa-times red"></i>
                     </li>
+                    
                 </ul>
             </div>
         </div>
